@startuml unblockUser
hide circle
skinparam classAttributeIconSize 0
class UsersController {
    - _context: ApplicationDbContext
    - _httpContextAccessor: IHttpContextAccessor
    + Unblock(UnblockUserDTO unblockUserDTO): Task<IActionResult>
}

class ApplicationDbContext {
    + UserBlocks: DbSet<UserBlock>
    # OnConfiguring(DbContextOptionsBuilder optionsBuilder): void
}
class UserBlock{
    + UserId: string
    + BlockUserId: string
    + User: ApplicationUser
    + BlockUser: ApplicationUser
}

class UnblockUserDTO {
    UnblockUserId: string
}

UsersController "1" o--"1" ApplicationDbContext
UsersController "1"--"1" UnblockUserDTO
ApplicationDbContext "*" o--"1" UserBlock
@enduml